--- a/apiman-gateway/Dockerfile
+++ b/apiman-gateway/Dockerfile
@@ -5,9 +5,12 @@ MAINTAINER Eric Wittmann <eric.wittmann@redhat.com>
 
 ENV APIMAN_VERSION 1.2.9.Final
 
-RUN cd $JBOSS_HOME \ && curl http://downloads.jboss.org/overlord/apiman/$APIMAN_VERSION/apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip -o apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip \ && bsdtar -xf apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip \ && rm apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip
-
 RUN $JBOSS_HOME/bin/add-user.sh admin admin123! --silent
+
+RUN cd $JBOSS_HOME \
+ && curl http://downloads.jboss.org/overlord/apiman/$APIMAN_VERSION/apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip -o apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip \
+ && bsdtar -xf apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip \
+ && rm apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip
 
 RUN rm -f $JBOSS_HOME/standalone/deployments/apiman-ds.xml
 RUN rm -f $JBOSS_HOME/standalone/deployments/apiman-es.war
