--- a/keycloak/keycloak.yaml
+++ b/keycloak/keycloak.yaml
@@ -9,6 +9,9 @@ spec:
     - port: 80
       name: http
       targetPort: 8080
+    - port: 443
+      name: https
+      targetPort: 8443
   selector:
     app: keycloak
 
