--- a/apiman-manager/Dockerfile
+++ b/apiman-manager/Dockerfile
@@ -18,7 +18,7 @@ RUN rm -f $JBOSS_HOME/standalone/deployments/apiman-gateway.war
 RUN rm -f $JBOSS_HOME/standalone/deployments/apiman-ds.xml
 
 # Postgres
-ADD postgresql-9.3-1102-jdbc41.jar $JBOSS_HOME/standalone/deployments
+ADD postgresql-9.3-1102.jdbc41.jar $JBOSS_HOME/standalone/deployments
 
 # Add apiman-ds.xml.xml
 ADD apiman-ds.xml $JBOSS_HOME/standalone/deployments
