changes with trusstore

--- a/apiman-gateway/apiman.properties
+++ b/apiman-gateway/apiman.properties
@@ -191,4 +191,4 @@ apiman-gateway.components.ILdapComponent=io.apiman.gateway.engine.impl.DefaultLd
 # ---------------------------------------------------------------------
 apiman-gateway.components.IHttpClientComponent=io.apiman.gateway.platforms.servlet.components.HttpClientComponentImpl
 
-apiman-gateway.public-endpoint=https://localhost:8443/apiman-gateway/
+apiman-gateway.public-endpoint=http://localhost:8443/apiman-gateway/
