realm tottaly removed and token logic

--- a/apiman-gateway/apiman.properties
+++ b/apiman-gateway/apiman.properties
@@ -22,11 +22,11 @@ apiman.hibernate.dialect=io.apiman.manager.api.jpa.ApimanPostgreSQLDialect
 apiman.hibernate.hbm2ddl.auto=validate
 
 # How the API Manager UI authenticates to the API Manager REST services
-apiman-manager-ui.api.authentication.type=bearerToken
-apiman-manager-ui.api.authentication.token.generator=io.apiman.manager.ui.server.kc.KeyCloakBearerTokenGenerator
+#apiman-manager-ui.api.authentication.type=bearerToken
+#apiman-manager-ui.api.authentication.token.generator=io.apiman.manager.ui.server.kc.KeyCloakBearerTokenGenerator
 
 # Security context settings.
-apiman-manager.security-context.type=keycloak
+#apiman-manager.security-context.type=keycloak
 
 # API Manager storage settings.
 apiman-manager.storage.type=jpa
