public endpoint added for manager as well

--- a/apiman-manager/apiman.properties
+++ b/apiman-manager/apiman.properties
@@ -205,3 +205,5 @@ apiman-gateway.components.ILdapComponent=io.apiman.gateway.engine.impl.DefaultLd
 # HTTP Client Component Settings
 # ---------------------------------------------------------------------
 apiman-gateway.components.IHttpClientComponent=io.apiman.gateway.platforms.servlet.components.HttpClientComponentImpl
+
+apiman-gateway.public-endpoint=http://apiman-gateway/apiman-gateway/
