elastic search timeout

--- a/apiman-gateway/apiman.properties
+++ b/apiman-gateway/apiman.properties
@@ -71,6 +71,7 @@ apiman-gateway.connector-factory.http.timeouts.read=30
 apiman-gateway.connector-factory.http.timeouts.write=30
 apiman-gateway.connector-factory.http.timeouts.connect=10
 apiman-gateway.connector-factory.http.followRedirects=true
+apiman.es.timeout=1000
 
 # ---------------------------------------------------------------------
 # Postgress Metrics Settings
