--- a/apiman-gateway/apiman.properties
+++ b/apiman-gateway/apiman.properties
@@ -28,6 +28,12 @@ apiman-manager-ui.api.authentication.token.generator=io.apiman.manager.ui.server
 # Security context settings.
 apiman-manager.security-context.type=keycloak
 
+apiman.es.protocol=http
+apiman.es.host=elasticsearch
+apiman.es.port=9200
+apiman.es.username=
+apiman.es.password=
+
 # API Manager storage settings.
 apiman-manager.storage.type=jpa
 apiman-manager.storage.jpa.initialize=true
