--- a/apiman-gateway/apiman.properties
+++ b/apiman-gateway/apiman.properties
@@ -6,13 +6,16 @@ apiman-manager.plugins.registries=http://cdn.rawgit.com/apiman/apiman-plugin-reg
 # Apiman Manager logging. standard, json or a FQDN implementing IApimanLogger
 apiman-manager.config.logger=standard
 
-# Initializer for the Gateway JDBC
-# ################################
-apiman.jdbc.datasource.jndi-location=java:jboss/datasources/apiman-gateway
-apiman-gateway.initializers=jdbc
-apiman-gateway.initializers.jdbc=io.apiman.gateway.engine.jdbc.JdbcInitializer
-apiman-gateway.initializers.jdbc.datasource.jndi-location=${apiman.jdbc.datasource.jndi-location}
-apiman-gateway.initializers.jdbc.datasource.type=postgresql9
+# ---------------------------------------------------------------------
+# The following are settings for using elasticsearch for various
+# apiman components.
+# ---------------------------------------------------------------------
+apiman.es.protocol=http
+apiman.es.host=elasticsearch.default
+apiman.es.port=9200
+apiman.es.username=
+apiman.es.password=
+apiman.es.timeout=10000
 
 # ---------------------------------------------------------------------
 # Some hibernate settings only useful when JPA is the storage.type.
@@ -28,12 +31,6 @@ apiman-manager-ui.api.authentication.token.generator=io.apiman.manager.ui.server
 # Security context settings.
 apiman-manager.security-context.type=keycloak
 
-apiman.es.protocol=http
-apiman.es.host=elasticsearch
-apiman.es.port=9200
-apiman.es.username=
-apiman.es.password=
-
 # API Manager storage settings.
 apiman-manager.storage.type=jpa
 apiman-manager.storage.jpa.initialize=true
@@ -46,8 +43,13 @@ apiman-manager.storage.jpa.initialize=true
 #apiman-manager.storage.es.initialize=true
 
 # API Manager metrics settings.
-apiman-manager.metrics.type=io.apiman.manager.api.jdbc.JdbcMetricsAccessor
-apiman-manager.metrics.datasource.jndi-location=${apiman.jdbc.datasource.jndi-location}
+apiman-manager.metrics.type=es
+apiman-manager.metrics.es.protocol=${apiman.es.protocol}
+apiman-manager.metrics.es.host=${apiman.es.host}
+apiman-manager.metrics.es.port=${apiman.es.port}
+apiman-manager.metrics.es.username=${apiman.es.username}
+apiman-manager.metrics.es.password=${apiman.es.password}
+apiman-manager.metrics.es.timeout=${apiman.es.timeout}
 
 # API Manager API Catalog
 apiman-manager.api-catalog.type=io.apiman.manager.api.core.catalog.JsonApiCatalog
@@ -77,14 +79,20 @@ apiman-gateway.connector-factory.http.timeouts.read=30
 apiman-gateway.connector-factory.http.timeouts.write=30
 apiman-gateway.connector-factory.http.timeouts.connect=10
 apiman-gateway.connector-factory.http.followRedirects=true
-apiman.es.timeout=1000
 
 # ---------------------------------------------------------------------
-# Postgress Metrics Settings
+# Elasticsearch Metrics Settings
 # ---------------------------------------------------------------------
 
-apiman-gateway.metrics=io.apiman.gateway.engine.jdbc.JdbcMetrics
-apiman-gateway.metrics.datasource.jndi-location=${apiman.jdbc.datasource.jndi-location}
+apiman-gateway.metrics=io.apiman.gateway.engine.es.ESMetrics
+apiman-gateway.metrics.client.type=jest
+apiman-gateway.metrics.client.protocol=${apiman.es.protocol}
+apiman-gateway.metrics.client.host=${apiman.es.host}
+apiman-gateway.metrics.client.port=${apiman.es.port}
+apiman-gateway.metrics.client.initialize=true
+apiman-gateway.metrics.client.username=${apiman.es.username}
+apiman-gateway.metrics.client.password=${apiman.es.password}
+apiman-gateway.metrics.client.timeout=${apiman.es.timeout}
 
 # ---------------------------------------------------------------------
 # SSL/TLS settings for the gateway connector(s).
@@ -198,4 +206,4 @@ apiman-gateway.components.ILdapComponent=io.apiman.gateway.engine.impl.DefaultLd
 # ---------------------------------------------------------------------
 apiman-gateway.components.IHttpClientComponent=io.apiman.gateway.platforms.servlet.components.HttpClientComponentImpl
 
-apiman-gateway.public-endpoint=http://apiman-gateway/apiman-gateway
+apiman-gateway.public-endpoint=http://apiman-gateway.default/apiman-gateway
