--- a/apiman-gateway/apiman.properties
+++ b/apiman-gateway/apiman.properties
@@ -11,7 +11,7 @@ apiman-manager.config.logger=standard
 # apiman components.
 # ---------------------------------------------------------------------
 apiman.es.protocol=http
-apiman.es.host=elasticsearch.default
+apiman.es.host=elasticsearch
 apiman.es.port=9200
 apiman.es.username=
 apiman.es.password=
