--- a/keycloak/keycloak.yaml
+++ b/keycloak/keycloak.yaml
@@ -45,7 +45,7 @@ spec:
     spec:
       containers:
         - name: keycloak
-          image: webalexx/keyloack
+          image: youngkoss/keycloak
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
