--- a/apiman-gateway/apiman.properties
+++ b/apiman-gateway/apiman.properties
@@ -63,8 +63,8 @@ apiman-gateway.plugin-registry.pluginRepositories=${apiman.plugins.repositories}
 apiman-gateway.connector-factory=io.apiman.gateway.platforms.servlet.connectors.HttpConnectorFactory
 apiman-gateway.policy-factory=io.apiman.gateway.engine.policy.PolicyFactoryImpl
 apiman-gateway.policy-factory.reloadSnapshots=false
-#apiman-gateway.logger-factory=io.apiman.common.logging.impl.NoOpLoggerFactory
-apiman-gateway.logger-factory=io.apiman.common.logging.slf4j.Slf4jLoggerFactory
+apiman-gateway.logger-factory=io.apiman.common.logging.impl.NoOpLoggerFactory
+#apiman-gateway.logger-factory=io.apiman.common.logging.slf4j.Slf4jLoggerFactory
 apiman-gateway.components.IPolicyFailureFactoryComponent=io.apiman.gateway.platforms.servlet.PolicyFailureFactoryComponent
 apiman-gateway.components.IBufferFactoryComponent=io.apiman.gateway.engine.impl.ByteBufferFactoryComponent
 
