--- a/apiman-gateway/Dockerfile
+++ b/apiman-gateway/Dockerfile
@@ -7,17 +7,8 @@ ENV APIMAN_VERSION 1.2.9.Final
 
 RUN $JBOSS_HOME/bin/add-user.sh admin admin123! --silent
 
-RUN cd $HOME
-RUN mkdir .m2
-RUN cd .m2
-RUN mkdir repository
-RUN cd repository
-RUN mkdir io
-RUN cd io
-RUN mkdir apiman
-RUN cd apiman
-RUN mkdir plugins
-RUN cd $HOME
+RUN mkdir -p $HOME/.m2/repository/io/apiman/plugins
+RUN mkdir cd $HOME
 RUN ls
 COPY apiman-plugins-config-policy.zip .m2/repository/io/apiman/plugins \ && bsdtar -xf apiman-plugins-config-policy.zip \ && rm apiman-plugins-config-policy.zip
 
