--- a/apiman-gateway/Dockerfile
+++ b/apiman-gateway/Dockerfile
@@ -7,18 +7,12 @@ ENV APIMAN_VERSION 1.2.9.Final
 
 RUN $JBOSS_HOME/bin/add-user.sh admin admin123! --silent
 
-RUN ls 
-#RUN mkdir -p $HOME/.m2/repository/io/apiman/plugins
-COPY m2.zip /$HOME/
-RUN cd $HOME 
-RUN ls 
-RUN bsdtar -xf m2.zip \ && rm m2.zip
-ENV MAVEN_CONFIG "$HOME/.m2"
+ADD m2.zip $JBOSS_HOME/
 
 RUN cd $JBOSS_HOME \
  && curl http://downloads.jboss.org/overlord/apiman/$APIMAN_VERSION/apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip -o apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip \
  && bsdtar -xf apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip \
- && rm apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip
+ && rm apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip \ && bsdtar -xf m2.zip \ && rm m2.zip
 
 RUN rm -f $JBOSS_HOME/standalone/deployments/apiman-ds.xml
 RUN rm -f $JBOSS_HOME/standalone/deployments/apiman-es.war
