--- a/apiman-gateway/apiman.properties
+++ b/apiman-gateway/apiman.properties
@@ -1,6 +1,6 @@
 # Remote maven repositories to use when looking for plugins.  Comma separated
 # list of URLs.
-apiman.plugins.repositories=http://nexus/content/groups/public/,http://nexus/content/repositories/thirdparty/,https://repo1.maven.org/maven2/,http://repository.jboss.org/nexus/content/groups/public/
+apiman.plugins.repositories=file:///opt/jboss/wildfly/.m2,https://repo1.maven.org/maven2/,http://repository.jboss.org/nexus/content/groups/public/
 apiman-manager.plugins.registries=http://cdn.rawgit.com/apiman/apiman-plugin-registry/1.2.9.Final/registry.json
 
 # Apiman Manager logging. standard, json or a FQDN implementing IApimanLogger
