--- a/apiman-manager/Dockerfile
+++ b/apiman-manager/Dockerfile
@@ -7,7 +7,7 @@ ENV APIMAN_VERSION 1.2.9.Final
 
 RUN $JBOSS_HOME/bin/add-user.sh admin admin123! --silent
 
-COPY .m2 $JBOSS_HOME/.m2
+COPY m2 $JBOSS_HOME/m2
 
 RUN cd $JBOSS_HOME \
  && curl http://downloads.jboss.org/overlord/apiman/$APIMAN_VERSION/apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip -o apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip \
