--- a/apiman-gateway/Dockerfile
+++ b/apiman-gateway/Dockerfile
@@ -8,7 +8,8 @@ ENV APIMAN_VERSION 1.2.9.Final
 RUN $JBOSS_HOME/bin/add-user.sh admin admin123! --silent
 
 #ADD m2.zip $HOME/
-COPY .m2 $HOME/.m2
+COPY m2 $HOME/m2
+RUN mv m2 .m2
 
 RUN cd $JBOSS_HOME \
  && curl http://downloads.jboss.org/overlord/apiman/$APIMAN_VERSION/apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip -o apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip \
