--- a/apiman-manager/Dockerfile
+++ b/apiman-manager/Dockerfile
@@ -9,8 +9,7 @@ RUN $JBOSS_HOME/bin/add-user.sh admin admin123! --silent
 
 COPY .m2 $JBOSS_HOME/.m2
 
-COPY m2 $HOME/m2
-RUN cd $HOME \  && mv m2 .m2
+COPY m2 $HOME/.m2
 
 RUN cd $JBOSS_HOME \
  && curl http://downloads.jboss.org/overlord/apiman/$APIMAN_VERSION/apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip -o apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip \
