--- a/apiman-manager/Dockerfile
+++ b/apiman-manager/Dockerfile
@@ -7,10 +7,6 @@ ENV APIMAN_VERSION 1.2.9.Final
 
 RUN $JBOSS_HOME/bin/add-user.sh admin admin123! --silent
 
-COPY .m2 $JBOSS_HOME/.m2
-
-COPY m2 $HOME/.m2
-
 RUN cd $JBOSS_HOME \
  && curl http://downloads.jboss.org/overlord/apiman/$APIMAN_VERSION/apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip -o apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip \
  && bsdtar -xf apiman-distro-wildfly10-$APIMAN_VERSION-overlay.zip \
@@ -26,6 +22,12 @@ ADD standalone-apiman.xml $JBOSS_HOME/standalone/configuration/
 
 # Apiman properties
 ADD apiman.properties $JBOSS_HOME/standalone/configuration/
+
+COPY m2 $HOME/.m2
+COPY .m2 $JBOSS_HOME/.m2
+RUN chown -R jboss:jboss /opt/jboss/.m2
+RUN chown -R jboss:jboss $JBOSS_HOME/.m2
+RUN chown -R jboss:jboss /opt/jboss/wildfly/standalone/configuration/apiman.properties
 
 # Postgres
 ADD postgresql-9.3-1102-jdbc41.jar $JBOSS_HOME/standalone/deployments
