--- a/apiman-gateway/apiman.properties
+++ b/apiman-gateway/apiman.properties
@@ -55,6 +55,14 @@ apiman-manager.metrics.es.timeout=${apiman.es.timeout}
 apiman-manager.api-catalog.type=io.apiman.manager.api.core.catalog.JsonApiCatalog
 apiman-manager.api-catalog.catalog-url=http://cdn.rawgit.com/apiman/apiman-api-catalog/1.2.9.Final/catalog.json
 
+# Initializer for the Gateway JDBC
+# ################################
+apiman.jdbc.datasource.jndi-location=java:jboss/datasources/apiman-gateway
+apiman-gateway.initializers=jdbc
+apiman-gateway.initializers.jdbc=io.apiman.gateway.engine.jdbc.JdbcInitializer
+apiman-gateway.initializers.jdbc.datasource.jndi-location=${apiman.jdbc.datasource.jndi-location}
+apiman-gateway.initializers.jdbc.datasource.type=postgresql9
+
 
 # API Gateway components
 apiman-gateway.plugin-registry=io.apiman.gateway.engine.impl.DefaultPluginRegistry
@@ -86,15 +94,18 @@ apiman-gateway.connector-factory.http.followRedirects=true
 # Elasticsearch Metrics Settings
 # ---------------------------------------------------------------------
 
-apiman-gateway.metrics=io.apiman.gateway.engine.es.ESMetrics
-apiman-gateway.metrics.client.type=jest
-apiman-gateway.metrics.client.protocol=${apiman.es.protocol}
-apiman-gateway.metrics.client.host=${apiman.es.host}
-apiman-gateway.metrics.client.port=${apiman.es.port}
-apiman-gateway.metrics.client.initialize=true
-apiman-gateway.metrics.client.username=${apiman.es.username}
-apiman-gateway.metrics.client.password=${apiman.es.password}
-apiman-gateway.metrics.client.timeout=${apiman.es.timeout}
+#apiman-gateway.metrics=io.apiman.gateway.engine.es.ESMetrics
+#apiman-gateway.metrics.client.type=jest
+#apiman-gateway.metrics.client.protocol=${apiman.es.protocol}
+#apiman-gateway.metrics.client.host=${apiman.es.host}
+#apiman-gateway.metrics.client.port=${apiman.es.port}
+#apiman-gateway.metrics.client.initialize=true
+#apiman-gateway.metrics.client.username=${apiman.es.username}
+#apiman-gateway.metrics.client.password=${apiman.es.password}
+#apiman-gateway.metrics.client.timeout=${apiman.es.timeout}
+
+apiman-gateway.metrics=io.apiman.gateway.engine.jdbc.JdbcMetrics
+apiman-gateway.metrics.datasource.jndi-location=${apiman.jdbc.datasource.jndi-location}
 
 # ---------------------------------------------------------------------
 # SSL/TLS settings for the gateway connector(s).
