--- a/apiman-manager/apiman.properties
+++ b/apiman-manager/apiman.properties
@@ -17,6 +17,12 @@ apiman.es.username=
 apiman.es.password=
 apiman.es.timeout=10000
 
+# API Manager metrics settings
+# ############################
+apiman.jdbc.datasource.jndi-location=java:jboss/datasources/apiman-gateway
+apiman-manager.metrics.type=io.apiman.manager.api.jdbc.JdbcMetricsAccessor
+apiman-manager.metrics.datasource.jndi-location=${apiman.jdbc.datasource.jndi-location}
+
 # ---------------------------------------------------------------------
 # Some hibernate settings only useful when JPA is the storage.type.
 # ---------------------------------------------------------------------
@@ -84,15 +90,15 @@ apiman-gateway.connector-factory.http.followRedirects=true
 # Elasticsearch Metrics Settings
 # ---------------------------------------------------------------------
 
-apiman-gateway.metrics=io.apiman.gateway.engine.es.ESMetrics
-apiman-gateway.metrics.client.type=jest
-apiman-gateway.metrics.client.protocol=${apiman.es.protocol}
-apiman-gateway.metrics.client.host=${apiman.es.host}
-apiman-gateway.metrics.client.port=${apiman.es.port}
-apiman-gateway.metrics.client.initialize=true
-apiman-gateway.metrics.client.username=${apiman.es.username}
-apiman-gateway.metrics.client.password=${apiman.es.password}
-apiman-gateway.metrics.client.timeout=${apiman.es.timeout}
+#apiman-gateway.metrics=io.apiman.gateway.engine.es.ESMetrics
+#apiman-gateway.metrics.client.type=jest
+#apiman-gateway.metrics.client.protocol=${apiman.es.protocol}
+#apiman-gateway.metrics.client.host=${apiman.es.host}
+#apiman-gateway.metrics.client.port=${apiman.es.port}
+#apiman-gateway.metrics.client.initialize=true
+#apiman-gateway.metrics.client.username=${apiman.es.username}
+#apiman-gateway.metrics.client.password=${apiman.es.password}
+#apiman-gateway.metrics.client.timeout=${apiman.es.timeout}
 
 # ---------------------------------------------------------------------
 # SSL/TLS settings for the gateway connector(s).
