--- a/apiman-gateway/Dockerfile
+++ b/apiman-gateway/Dockerfile
@@ -37,6 +37,7 @@ ADD apiman-ds.xml $JBOSS_HOME/standalone/deployments
 ADD modules.xml $JBOSS_HOME/standalone/deployments
 
 ADD check.sh $JBOSS_HOME/probe
+RUN chmod +x $JBOSS_HOME/probe
 
 # Set the default command to run on boot
 ENTRYPOINT ["/opt/jboss/wildfly/bin/standalone.sh", "-b", "0.0.0.0", "-bmanagement", "0.0.0.0", "-c", "standalone-apiman.xml"]
