--- a/apiman-gateway/Dockerfile
+++ b/apiman-gateway/Dockerfile
@@ -36,9 +36,9 @@ ADD apiman-ds.xml $JBOSS_HOME/standalone/deployments
 # Add modules.xml.xml
 ADD modules.xml $JBOSS_HOME/standalone/deployments
 
-RUN mkdir -p $JBOSS_HOME/probe
-ADD check.sh $JBOSS_HOME/probe
-RUN chmod +x $JBOSS_HOME/probe/check.sh
+#RUN mkdir -p $JBOSS_HOME/probe
+ADD check.sh 
+RUN chmod +x check.sh
 
 # Set the default command to run on boot
 ENTRYPOINT ["/opt/jboss/wildfly/bin/standalone.sh", "-b", "0.0.0.0", "-bmanagement", "0.0.0.0", "-c", "standalone-apiman.xml"]
