--- a/apiman-gateway/Dockerfile
+++ b/apiman-gateway/Dockerfile
@@ -37,8 +37,8 @@ ADD apiman-ds.xml $JBOSS_HOME/standalone/deployments
 ADD modules.xml $JBOSS_HOME/standalone/deployments
 
 #RUN mkdir -p $JBOSS_HOME/probe
-ADD check.sh .
-RUN chmod +x check.sh
+ADD check.sh $JBOSS_HOME/standalone/deployments
+RUN cd $JBOSS_HOME/standalone/deployments \ && chmod +x check.sh
 
 # Set the default command to run on boot
 ENTRYPOINT ["/opt/jboss/wildfly/bin/standalone.sh", "-b", "0.0.0.0", "-bmanagement", "0.0.0.0", "-c", "standalone-apiman.xml"]
