--- a/apiman-gateway/apiman.properties
+++ b/apiman-gateway/apiman.properties
@@ -145,15 +145,18 @@ apiman-gateway.connector-factory.tls.devMode=true
 # Registry Settings
 # ---------------------------------------------------------------------
 
-apiman-gateway.registry=io.apiman.gateway.engine.es.PollCachingESRegistry
-apiman-gateway.registry.client.type=jest
-apiman-gateway.registry.client.protocol=${apiman.es.protocol}
-apiman-gateway.registry.client.host=${apiman.es.host}
-apiman-gateway.registry.client.port=${apiman.es.port}
-apiman-gateway.registry.client.initialize=true
-apiman-gateway.registry.client.username=${apiman.es.username}
-apiman-gateway.registry.client.password=${apiman.es.password}
-apiman-gateway.registry.client.timeout=${apiman.es.timeout}
+apiman-gateway.registry=io.apiman.gateway.engine.jdbc.PollCachingJdbcRegistry
+apiman-gateway.registry.datasource.jndi-location=java:jboss/datasources/apiman-gateway
+
+#apiman-gateway.registry=io.apiman.gateway.engine.es.PollCachingESRegistry
+#apiman-gateway.registry.client.type=jest
+#apiman-gateway.registry.client.protocol=${apiman.es.protocol}
+#apiman-gateway.registry.client.host=${apiman.es.host}
+#apiman-gateway.registry.client.port=${apiman.es.port}
+#apiman-gateway.registry.client.initialize=true
+#apiman-gateway.registry.client.username=${apiman.es.username}
+#apiman-gateway.registry.client.password=${apiman.es.password}
+#apiman-gateway.registry.client.timeout=${apiman.es.timeout}
 #apiman-gateway.registry.cache-polling-interval=15
 
 # ---------------------------------------------------------------------
