--- a/apiman-gateway/apiman.properties
+++ b/apiman-gateway/apiman.properties
@@ -222,4 +222,4 @@ apiman-gateway.components.ILdapComponent=io.apiman.gateway.engine.impl.DefaultLd
 # ---------------------------------------------------------------------
 apiman-gateway.components.IHttpClientComponent=io.apiman.gateway.platforms.servlet.components.HttpClientComponentImpl
 
-apiman-gateway.public-endpoint=http://apiman-gateway.default/apiman-gateway
+apiman-gateway.public-endpoint=http://apiman-gateway.apimanager/apiman-gateway
