--- a/apiman-manager/apiman-manager.yaml
+++ b/apiman-manager/apiman-manager.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: apimanager
   labels:
     name: apiman
   name: apiman
@@ -18,6 +19,7 @@ spec:
 apiVersion: v1
 kind: ReplicationController
 metadata:
+  namespace: apimanager
   labels:
     app: apiman
   name: apiman
@@ -25,6 +27,7 @@ spec:
   replicas: 1
   template:
     metadata:
+      namespace: apimanager
       labels:
         app: apiman
     spec:
