--- a/keycloak/keycloak.yaml
+++ b/keycloak/keycloak.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: apimanager
   labels:
     name: keycloak
   name: keycloak
@@ -19,6 +20,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: apimanager
   labels:
     name: postgres
   name: postgres
@@ -33,6 +35,7 @@ spec:
 apiVersion: v1
 kind: ReplicationController
 metadata:
+  namespace: apimanager
   labels:
     app: keycloak
   name: keycloak
@@ -40,6 +43,7 @@ spec:
   replicas: 1
   template:
     metadata:
+      namespace: apimanager
       labels:
         app: keycloak
     spec:
